coffee machine html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,43 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="machine-top">
+        
+    </div>
     <div class="top-div"></div>
     <div class="juice-marker-box">
-
+        <div class="beverage-div">
+               <div cass="apple">
+                    <div class="top-machine"></div>
+                     <div class="middle-part"> </div>
+                     <div class="end-part"> </div>
+                    <div class="base-machine"></div>
+               </div>
+               <div cass="orange">
+                     <div class="top-machine"></div>
+                     <div class="middle-part"> </div>
+                     <div class="end-part"> </div>
+                    <div class="base-machine"></div>
+               </div>
+               <div cass="mango">
+                     <div class="top-machine"></div>
+                     <div class="middle-part"> </div>
+                     <div class="end-part"> </div>
+                      <div class="base-machine"></div>
+               </div>
+               <div cass="coffee">
+ <div class="top-machine"></div>
+                     <div class="middle-part"> </div>
+                     <div class="end-part"> </div>
+                     <div class="base-machine"></div>
+               </div>
+               <div cass="milk">
+ <div class="top-machine"></div>
+                     <div class="middle-part"> </div>
+                     <div class="end-part"> </div>
+                     <div class="base-machine"></div>
+               </div>
+        </div>
     </div>
     <div class="end-box"></div>
     <div class="floor-div"> </div>
