--- a/index.html
+++ b/index.html
@@ -14,31 +14,43 @@
     <div class="juice-marker-box">
         <div class="beverage-div">
                <div cass="apple">
-                    <div class="top-machine"></div>
+                    <div class="top-machine">
+                        <p class="fruit-emoji">&#127822</p>
+                        <p class='press'>PRESS</p>
+                    </div>
                      <div class="middle-part"> </div>
                      <div class="end-part"> </div>
                     <div class="base-machine"></div>
                </div>
                <div cass="orange">
-                     <div class="top-machine"></div>
+                     <div class="top-machine">
+                       <p class="fruit-emoji">&#127818;</p> 
+                        <p class='press'>PRESS</p>
+                     </div>
                      <div class="middle-part"> </div>
                      <div class="end-part"> </div>
                     <div class="base-machine"></div>
                </div>
                <div cass="mango">
-                     <div class="top-machine"></div>
+                     <div class="top-machine">
+                         <p class="fruit-emoji">&#129389</p>
+                          <p class='press'>PRESS</p>
+                     </div>
                      <div class="middle-part"> </div>
                      <div class="end-part"> </div>
                       <div class="base-machine"></div>
                </div>
                <div cass="coffee">
- <div class="top-machine"></div>
-                     <div class="middle-part"> </div>
+ <div class="top-machine">
+    <p class="fruit-emoji">☕</p>
+     <p class='press'>PRESS</p>
+</div>
+                     <div class="middle-part">  </div>
                      <div class="end-part"> </div>
                      <div class="base-machine"></div>
                </div>
                <div cass="milk">
- <div class="top-machine"></div>
+ <div class="top-machine"> <p class="fruit-emoji">&#129371;</p></div>
                      <div class="middle-part"> </div>
                      <div class="end-part"> </div>
                      <div class="base-machine"></div>
